--- a/seguimiento.html
+++ b/seguimiento.html
@@ -27,8 +27,8 @@
     </div>
  
     <div class="centrar-contenedor">
-      <a href="seguimiento.html"><button style="font-size: 400%;" class="efecto centrar">Actualizar lista</button></a>
-      <a href="index.html"><button style="font-size: 400%;"class="efecto centrar">Inicio</button></a>
+      <a href="seguimiento.html"><button style="font-size: 50px;" class="efecto centrar">Actualizar</button></a>
+      <a href="index.html"><button style="font-size: 50px;"class="efecto centrar">Inicio</button></a>
     </div>
     
     <div class="centrar-contenedor margen">
