--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <form id="formulario" onsubmit="enviarDatos(event)">
     <label class="color1" for="dni"> DNI: </label>
     <input type="text" id="dni" name="dni" required>
-    <button class="efecto" type="submit">Enviar</button>
+    <button  class="efecto boton_e" type="submit">Enviar</button>
   </form>
 </div>
     
