--- a/seguimiento.html
+++ b/seguimiento.html
@@ -18,16 +18,14 @@
       </a>
     </div>
     
-    <div>
-      <img class="img_perfil2" src="imagenes/perfil2.jpg" alt="Imagen de perfil">
-    </div>
+
 
     <div>
-      <h1 style="font-size: 300%;">Lista de personas faltantes</h1>
+      <h1 style="font-size: 300%;"> Votos faltantes</h1>
     </div>
  
     <div class="centrar-contenedor">
-      <a href="seguimiento.html"><button style="font-size: 30px;" class="efecto centrar">Actualizar</button></a>
+      <a href="seguimiento.html"><button style="font-size: 40px;" class="efecto centrar">Actualizar</button></a>
     </div>
     
     <div class="centrar-contenedor margen">
