--- a/index.html
+++ b/index.html
@@ -49,9 +49,20 @@
 </div>
     
 <div class="centrar-contenedor">
-  <a href="seguimiento.html"><button class="efecto centrar margen">Seguimiento de votos</button></a>
+  <a href="seguimiento.html"><button class="efecto centrar margen">Lista0</button></a>
 </div>
     
+<div class="centrar-contenedor">
+  <a href="seguimiento1.html"><button class="efecto centrar margen">Lista1</button></a>
+</div>
+
+<div class="centrar-contenedor">
+  <a href="seguimiento2.html"><button class="efecto centrar margen">Lista2</button></a>
+</div>
+
+<div class="centrar-contenedor">
+  <a href="seguimiento3.html"><button class="efecto centrar margen">Lista3</button></a>
+</div>
 
 </body>
 </html>
