--- a/index.html
+++ b/index.html
@@ -49,15 +49,15 @@
 </div>
     
 <div class="centrar-contenedor">
-  <a href="seguimiento.html"><button class="efecto centrar margen">Lista0</button></a>
+  <a href="seguimiento.html"><button class="efecto centrar margen">Lista Natu</button></a>
 </div>
     
 <div class="centrar-contenedor">
-  <a href="seguimiento1.html"><button class="efecto centrar margen">Lista1</button></a>
+  <a href="seguimiento1.html"><button class="efecto centrar margen">Lista Guido</button></a>
 </div>
 
 <div class="centrar-contenedor">
-  <a href="seguimiento2.html"><button class="efecto centrar margen">Lista2</button></a>
+  <a href="seguimiento2.html"><button class="efecto centrar margen">Lista Lula</button></a>
 </div>
 
 <div class="centrar-contenedor">
