--- a/seguimiento2.html
+++ b/seguimiento2.html
@@ -25,7 +25,7 @@
     </div>
  
     <div class="centrar-contenedor">
-      <a href="seguimiento.html"><button style="font-size: 40px;" class="efecto centrar">Actualizar</button></a>
+      <a href="seguimiento2.html"><button style="font-size: 40px;" class="efecto centrar">Actualizar</button></a>
     </div>
     
     <div class="centrar-contenedor margen">
