--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
   <a href="seguimiento2.html"><button class="efecto centrar margen">Lista Lula</button></a>
 </div>
 
+<div class="centrar-contenedor">
+  <a href="seguimiento2.html"><button class="efecto centrar margen">Lista Heidi</button></a>
+</div>
 
 
 </body>
