--- a/index.html
+++ b/index.html
@@ -64,6 +64,30 @@
   <a href="seguimiento3.html"><button class="efecto centrar margen">Lista Heidi</button></a>
 </div>
 
+<div class="centrar-contenedor">
+  <a href="seguimiento4.html"><button class="efecto centrar margen">Lista Ely Álvarez </button></a>
+</div>
+
+<div class="centrar-contenedor">
+  <a href="seguimiento5.html"><button class="efecto centrar margen">Lista Maria Yanci </button></a>
+</div>
+
+<div class="centrar-contenedor">
+  <a href="seguimiento6.html"><button class="efecto centrar margen">Lista Toro</button></a>
+</div>
+
+<div class="centrar-contenedor">
+  <a href="seguimiento7.html"><button class="efecto centrar margen">Lista Franco </button></a>
+</div>
+
+<div class="centrar-contenedor">
+  <a href="seguimiento8.html"><button class="efecto centrar margen">Lista Leo Z</button></a>
+</div>
+
+<div class="centrar-contenedor">
+  <a href="seguimiento9.html"><button class="efecto centrar margen">Lista Oscar</button></a>
+</div>
+
 
 </body>
 </html>
