--- a/index.html
+++ b/index.html
@@ -88,6 +88,16 @@
   <a href="seguimiento9.html"><button class="efecto centrar margen">Lista Oscar</button></a>
 </div>
 
+<div>
+  <footer >
+    <p>Copyright © Todos los derechos reservados. Roar Company</p>
+    <img class="img_logo" src="imagenes/logo rc sin fondo.png" alt="Imagen de perfil">
+  </footer>
+</div>
+   
+    
+  
+
 
 </body>
 </html>
