--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 <div>
   <footer >
     <p>Copyright © Todos los derechos reservados. Roar Company</p>
-    <img class="img_logo" src="imagenes/logo rc sin fondo.png" alt="Imagen de perfil">
+    <img class="img_logo" src="imagenes/logo rc sin fondo.png" alt="Imagen del logo">
   </footer>
 </div>
    
